<resources>
    <string name="app_name">Custom View Demo</string>
    <string name="two_to_3">2:3</string>
    <string name="one_to_1">1:1</string>
    <string name="one_to_2">1:2</string>
    <string name="normal">Normal</string>
    <string name="section1">Section 1: Square Text View</string>
    <string name="section2">Section 2: Custom attribute</string>
    <string name="section3">Section 3: Changing attribute dynamically</string>
    <string name="section5">Section 5: Adding a drawable attribute</string>
    <string name="section6">Section 6: Change drawable dynamically</string>
    <string name="section7">Section 7: Change drawable state</string>
    <string name="section8">Section 8: Move drawable</string>
    <string name="section10">Section 10: Span text from xml</string>
    <string name="section11">Section 11: Animate View</string>
    <string name="section12">Section 12: Drawing a path</string>
    <string name="section2_description">Same width, different ratios</string>
    <string name="edit_text_hint">Change text here</string>
    <string name="banned_text">This is a banned TextView</string>
    <string name="banned">Ban</string>
    <string name="approved">Approve</string>
    <string name="style_text">Style Text</string>
    <string name="toggle_visibility">Toggle visibility</string>
    <string name="touch_to_draw">Touch me to draw</string>
</resources>
