<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/section1"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/section2"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section1" />

        <TextView
            android:id="@+id/section3"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section2" />

        <TextView
            android:id="@+id/section5"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section3" />

        <TextView
            android:id="@+id/section6"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section5" />

        <TextView
            android:id="@+id/section7"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section6" />

        <TextView
            android:id="@+id/section8"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section7" />

        <TextView
            android:id="@+id/section10"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section8" />

        <TextView
            android:id="@+id/section11"
            android:layout_width="0dp"
            android:layout_height="@dimen/list_item_height"
            android:gravity="center_vertical"
            android:onClick="onClickButton"
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            android:paddingLeft="@dimen/list_item_horizontal_padding"
            android:paddingRight="@dimen/list_item_horizontal_padding"
            android:paddingStart="@dimen/list_item_horizontal_padding"
            android:text="@string/section11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/section10" />

    </android.support.constraint.ConstraintLayout>

</layout>
