<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kickingmobiledev.customviewjava.ui.activities.Section5Activity">

        <com.kickingmobiledev.customviewjava.ui.widgets.ResizableTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/text_view_background"
            android:gravity="center"
            android:text="@string/banned_text"
            app:aspect_ratio="one_to_1"
            app:front_drawable="@drawable/ic_block_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:drawableStart="@drawable/ic_check_black_24dp"
            android:onClick="onClickButton"
            android:text="@string/approved"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/banned"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/banned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:drawableLeft="@drawable/ic_block_black_24dp"
            android:drawableStart="@drawable/ic_block_black_24dp"
            android:onClick="onClickButton"
            android:text="@string/banned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/approved" />

    </android.support.constraint.ConstraintLayout>

</layout>
